Prevent text wrapping on exercise images

--- a/resources/styles/book-content/questions.less
+++ b/resources/styles/book-content/questions.less
@@ -9,6 +9,7 @@
   .question-stem {
     float: left;
     width: 96%;
+    img { display: block; }
   }
 }
 .answers-answer {
